@@ -39,9 +39,6 @@ namespace std
 {
 _GLIBCXX_BEGIN_NAMESPACE_TR1
 
-  template<typename _Tp>
-    class reference_wrapper;
-
   // Adds a const reference to a non-reference type.
   template<typename _Tp>
     struct __add_c_ref
@@ -375,6 +372,10 @@ _GLIBCXX_BEGIN_NAMESPACE_TR1
 	       const tuple<_UElements...>& __u)
     { return !(__t < __u); }
 
+#ifdef _GLIBCXX_INCLUDE_AS_TR1
+  template<typename _Tp>
+    class reference_wrapper;
+
   // Helper which adds a reference to a type when given a reference_wrapper
   template<typename _Tp>
     struct __strip_reference_wrapper
@@ -393,6 +394,7 @@ _GLIBCXX_BEGIN_NAMESPACE_TR1
     {
       typedef _Tp& __type;
     };
+#endif
 
   template<typename... _Elements>
     inline tuple<typename __strip_reference_wrapper<_Elements>::__type...>
